--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,12 +1,15 @@
-FROM golang:latest as builder
+FROM golang:alpine AS builder
 
 WORKDIR /app
 
-COPY . .
+COPY go.mod go.sum ./
 
 RUN go mod download
 
+COPY . .
+
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
+
 
 FROM alpine:latest  
 RUN apk --no-cache add ca-certificates
