--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,7 +2,9 @@ FROM golang:alpine AS builder
 
 WORKDIR /app
 
-COPY go.mod go.sum ./
+COPY go.mod ./
+RUN go mod tidy 
+COPY go.sum ./
 
 RUN go mod download
 
