--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,24 +2,19 @@ FROM golang:alpine AS builder
 
 WORKDIR /app
 
-COPY go.mod ./
-RUN go mod tidy 
+COPY go.mod go.sum ./
 
 RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
+RUN go build -o main .
 
+FROM alpine:latest
 
-FROM alpine:latest  
-RUN apk --no-cache add ca-certificates
-
-WORKDIR /root/
+WORKDIR /app
 
 COPY --from=builder /app/main .
-COPY --from=builder /app/views ./views
-COPY --from=builder /app/assets ./assets
 
 EXPOSE 3000
 
