--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -1,3 +1,10 @@
+name: Build and Publish Docker image
+
+on: 
+  push: 
+    branches: 
+      - main
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
