--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -15,6 +15,8 @@ FROM alpine:latest
 WORKDIR /app
 
 COPY --from=builder /app/main .
+COPY --from=builder /app/views ./views
+COPY --from=builder /app/assets ./assets
 
 EXPOSE 3000
 
